@@ -35,6 +35,7 @@ typedef long (*GPUopen)(unsigned long *, char *, char *);
 typedef long (*SPUopen)(void);
 typedef long (*PADopen)(unsigned long *);
 typedef long (*NETopen)(unsigned long *);
+typedef long (*SIO1open)(unsigned long *);
 
 #else
 
@@ -44,6 +45,7 @@ typedef long (CALLBACK* GPUopen)(HWND);
 typedef long (CALLBACK* SPUopen)(HWND);
 typedef long (CALLBACK* PADopen)(HWND);
 typedef long (CALLBACK* NETopen)(HWND);
+typedef long (CALLBACK* SIO1open)(HWND);
 
 #endif
 
@@ -317,6 +319,75 @@ extern NETsendPadData        NET_sendPadData;
 extern NETrecvPadData        NET_recvPadData;
 extern NETsetInfo            NET_setInfo;
 extern NETkeypressed         NET_keypressed;
+
+// SIO1 Functions (link cable)
+typedef long (CALLBACK* SIO1init)(void);
+typedef long (CALLBACK* SIO1shutdown)(void);
+typedef long (CALLBACK* SIO1close)(void);
+typedef long (CALLBACK* SIO1configure)(void);
+typedef long (CALLBACK* SIO1test)(void);
+typedef void (CALLBACK* SIO1about)(void);
+typedef void (CALLBACK* SIO1pause)(void);
+typedef void (CALLBACK* SIO1resume)(void);
+typedef long (CALLBACK* SIO1keypressed)(int);
+typedef void (CALLBACK* SIO1writeData8)(unsigned char);
+typedef void (CALLBACK* SIO1writeData16)(unsigned short);
+typedef void (CALLBACK* SIO1writeData32)(unsigned long);
+typedef void (CALLBACK* SIO1writeStat16)(unsigned short);
+typedef void (CALLBACK* SIO1writeStat32)(unsigned long);
+typedef void (CALLBACK* SIO1writeMode16)(unsigned short);
+typedef void (CALLBACK* SIO1writeMode32)(unsigned long);
+typedef void (CALLBACK* SIO1writeCtrl16)(unsigned short);
+typedef void (CALLBACK* SIO1writeCtrl32)(unsigned long);
+typedef void (CALLBACK* SIO1writeBaud16)(unsigned short);
+typedef void (CALLBACK* SIO1writeBaud32)(unsigned long);
+typedef uint32_t (CALLBACK* SIO1readData8)(void);
+typedef uint32_t (CALLBACK* SIO1readData16)(void);
+typedef uint32_t (CALLBACK* SIO1readData32)(void);
+typedef uint32_t (CALLBACK* SIO1readStat16)(void);
+typedef uint32_t (CALLBACK* SIO1readStat32)(void);
+typedef uint32_t (CALLBACK* SIO1readMode16)(void);
+typedef uint32_t (CALLBACK* SIO1readMode32)(void);
+typedef uint32_t (CALLBACK* SIO1readCtrl16)(void);
+typedef uint32_t (CALLBACK* SIO1readCtrl32)(void);
+typedef uint32_t (CALLBACK* SIO1readBaud16)(void);
+typedef uint32_t (CALLBACK* SIO1readBaud32)(void);
+typedef void (CALLBACK* SIO1registerCallback)(void (CALLBACK *callback)(void));
+
+// SIO1 function pointers 
+extern SIO1init               SIO1_init;
+extern SIO1shutdown           SIO1_shutdown;
+extern SIO1open               SIO1_open;
+extern SIO1close              SIO1_close; 
+extern SIO1test               SIO1_test;
+extern SIO1configure          SIO1_configure;
+extern SIO1about              SIO1_about;
+extern SIO1pause              SIO1_pause;
+extern SIO1resume             SIO1_resume;
+extern SIO1keypressed         SIO1_keypressed;
+extern SIO1writeData8         SIO1_writeData8;
+extern SIO1writeData16        SIO1_writeData16;
+extern SIO1writeData32        SIO1_writeData32;
+extern SIO1writeStat16        SIO1_writeStat16;
+extern SIO1writeStat32        SIO1_writeStat32;
+extern SIO1writeMode16        SIO1_writeMode16;
+extern SIO1writeMode32        SIO1_writeMode32;
+extern SIO1writeCtrl16        SIO1_writeCtrl16;
+extern SIO1writeCtrl32        SIO1_writeCtrl32;
+extern SIO1writeBaud16        SIO1_writeBaud16;
+extern SIO1writeBaud32        SIO1_writeBaud32;
+extern SIO1readData8          SIO1_readData8;
+extern SIO1readData16         SIO1_readData16;
+extern SIO1readData32         SIO1_readData32;
+extern SIO1readStat16         SIO1_readStat16;
+extern SIO1readStat32         SIO1_readStat32;
+extern SIO1readMode16         SIO1_readMode16;
+extern SIO1readMode32         SIO1_readMode32;
+extern SIO1readCtrl16         SIO1_readCtrl16;
+extern SIO1readCtrl32         SIO1_readCtrl32;
+extern SIO1readBaud16         SIO1_readBaud16;
+extern SIO1readBaud32         SIO1_readBaud32;
+extern SIO1registerCallback   SIO1_registerCallback;
 
 void CALLBACK clearDynarec(void);
 
