@@ -1,3 +1,10 @@
+July 3, 2010 edgbla <edgbla@yandex.ru>
+
+ * libpcsxcore/psxhw.c: Sio1 interface (link cable).
+ * libpcsxcore/plugins.c: Likewise.
+ * libpcsxcore/plugins.h: Likewise.
+ * libpcsxcore/psxcommon.h: Likewise.
+
 July 2, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * libpcsxcore/cdriso.c: Fixed subchannel data handling with images ripped
